--- a/react-18/src/index.css
+++ b/react-18/src/index.css
@@ -1,2 +1,13 @@
 @import "tailwindcss";
 
+body {
+  background-color: #ccc;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  /* text-align: center; */
+}
